7/17/2024 V0.1.0		 - patch level 21
	* Merged example3 to the Minibox SHell
	* Cleaned and organized the minibox-shell directory
	* Switched to linenoise which offered a very great size reduction solution.
	* Added Makefile to Minibox SHell source.
	* Changed ls to list in standard order
	* Applied bugfixes to minibox.c source

7/12/2024 V0.1.0pre7 - pre-release version 7 (stable)
	* Reached a massive milestone by creating a shell example
	* Created another shell example but using readline this time, a major improvement
		since libreadline it includes line-editing abilities and history handling
	* Updated all C source files to include the standard license header, and some extra
		info
	* Added another example but using the bloated libreadline this time
	* Added another example using the lightweight liblinenoise this time
	* Added variable expansion to shell
	* Tested example shells for basic shell functionality


7/9/2024 V0.1.0pre6 - pre-release version 6 (testing)
	* Massive load of fixed :)
	* Added true and false, and ls
	* Improved code sources
	* FIXED cat FINALLY !!! -- also a silly mistake :D

7/7/2024 V0.1.0pre5 - pre-release version 5 (unstable)
	* Fixed sleep finally - fixed a obvious silly mistake and
		fully recoded the function with better error handling
		but with a more modern approach.
	* Still in the progress of fixing cat!

7/7/2024 V0.1.0pre4 - pre-release version 4 (unstable)
	* Added sleep (currently broken) and whoami

7/6/2024 V0.1.0pre3 - pre-release version 3 (unstable)
	* Added usage printing if program invoked as nothing but itself
		the driver (minibox)
	* Added a Makefile to make life easier.
	* Added the first target to Makefile - all, minibox, links.
	* Added a dist target in Makefile to make releases easier
	* Created github repository with the name 'minibox'

7/3/2024 V0.1.0pre2 - pre-release version 2
	* Introduced the sync function being the smallest program
	* Introduced update since its the same thing as sync() but repeats